--- a/jupyternote.ipynb
+++ b/jupyternote.ipynb
@@ -505,9 +505,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43a6c3c5-db37-46c7-b3bf-cfe74b8a67d4",
+   "metadata": {},
+   "source": [
+    "## **Data Cleaning and Preparation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "effd2c69-9974-465e-9c0b-d6de7a349b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customerID', 'gender', 'SeniorCitizen', 'Partner', 'Dependents',\n",
+       "       'tenure', 'PhoneService', 'MultipleLines', 'InternetService',\n",
+       "       'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport',\n",
+       "       'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling',\n",
+       "       'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data columns \n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4b61d262-7a0c-4a82-bae8-8cd81370d5a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "customerID:\n",
+      "['7590-VHVEG' '5575-GNVDE' '3668-QPYBK' ... '4801-JZAZL' '8361-LTMKD'\n",
+      " '3186-AJIEK']\n",
+      " \n",
+      "gender:\n",
+      "['Female' 'Male']\n",
+      " \n",
+      "SeniorCitizen:\n",
+      "[0 1]\n",
+      " \n",
+      "Partner:\n",
+      "['Yes' 'No']\n",
+      " \n",
+      "Dependents:\n",
+      "['No' 'Yes']\n",
+      " \n",
+      "tenure:\n",
+      "[ 1 34  2 45  8 22 10 28 62 13 16 58 49 25 69 52 71 21 12 30 47 72 17 27\n",
+      "  5 46 11 70 63 43 15 60 18 66  9  3 31 50 64 56  7 42 35 48 29 65 38 68\n",
+      " 32 55 37 36 41  6  4 33 67 23 57 61 14 20 53 40 59 24 44 19 54 51 26  0\n",
+      " 39]\n",
+      " \n",
+      "PhoneService:\n",
+      "['No' 'Yes']\n",
+      " \n",
+      "MultipleLines:\n",
+      "['No phone service' 'No' 'Yes']\n",
+      " \n",
+      "InternetService:\n",
+      "['DSL' 'Fiber optic' 'No']\n",
+      " \n",
+      "OnlineSecurity:\n",
+      "['No' 'Yes' 'No internet service']\n",
+      " \n",
+      "OnlineBackup:\n",
+      "['Yes' 'No' 'No internet service']\n",
+      " \n",
+      "DeviceProtection:\n",
+      "['No' 'Yes' 'No internet service']\n",
+      " \n",
+      "TechSupport:\n",
+      "['No' 'Yes' 'No internet service']\n",
+      " \n",
+      "StreamingTV:\n",
+      "['No' 'Yes' 'No internet service']\n",
+      " \n",
+      "StreamingMovies:\n",
+      "['No' 'Yes' 'No internet service']\n",
+      " \n",
+      "Contract:\n",
+      "['Month-to-month' 'One year' 'Two year']\n",
+      " \n",
+      "PaperlessBilling:\n",
+      "['Yes' 'No']\n",
+      " \n",
+      "PaymentMethod:\n",
+      "['Electronic check' 'Mailed check' 'Bank transfer (automatic)'\n",
+      " 'Credit card (automatic)']\n",
+      " \n",
+      "MonthlyCharges:\n",
+      "[29.85 56.95 53.85 ... 63.1  44.2  78.7 ]\n",
+      " \n",
+      "TotalCharges:\n",
+      "['29.85' '1889.5' '108.15' ... '346.45' '306.6' '6844.5']\n",
+      " \n",
+      "Churn:\n",
+      "['No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking for unique values in each columns \n",
+    "\n",
+    "print(\"\\n \\n\".join(f\"{col}:\\n{df[col].unique()}\" for col in df.columns))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f2774f-3612-455a-84c2-e869fcc8b00d",
+   "id": "95229b1f-4ffd-4f59-a0b2-6c4899d6a767",
    "metadata": {},
    "outputs": [],
    "source": []
