--- a/jupyternote.ipynb
+++ b/jupyternote.ipynb
@@ -541,7 +541,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "id": "95229b1f-4ffd-4f59-a0b2-6c4899d6a767",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerID</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
+       "      <th>MultipleLines</th>\n",
+       "      <th>InternetService</th>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DeviceProtection</th>\n",
+       "      <th>TechSupport</th>\n",
+       "      <th>StreamingTV</th>\n",
+       "      <th>StreamingMovies</th>\n",
+       "      <th>Contract</th>\n",
+       "      <th>PaperlessBilling</th>\n",
+       "      <th>PaymentMethod</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [customerID, gender, SeniorCitizen, Partner, Dependents, tenure, PhoneService, MultipleLines, InternetService, OnlineSecurity, OnlineBackup, DeviceProtection, TechSupport, StreamingTV, StreamingMovies, Contract, PaperlessBilling, PaymentMethod, MonthlyCharges, TotalCharges, Churn]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for duplicates on the customerID column \n",
+    "df[df.duplicated(subset=['customerID'], keep=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4b61d262-7a0c-4a82-bae8-8cd81370d5a9",
    "metadata": {},
    "outputs": [
@@ -627,8 +701,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "c11bdb67-03a9-4b01-9253-2b4e2e590654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change yes and no to 1 and 2 respectively, to make it fit for statistical analysis\n",
+    "for col in df.iloc[:, np.r_[3, 4, 6, 7, 9:15, 16, 20]]: \n",
+    "    df[col] = df[col].map({'Yes': 1, 'No': 0}).fillna(0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b261d285-a5c3-4fd6-8bbe-894bcdfe7f1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "customerID:\n",
+      "['7590-VHVEG' '5575-GNVDE' '3668-QPYBK' ... '4801-JZAZL' '8361-LTMKD'\n",
+      " '3186-AJIEK']\n",
+      " \n",
+      "gender:\n",
+      "['Female' 'Male']\n",
+      " \n",
+      "SeniorCitizen:\n",
+      "[0 1]\n",
+      " \n",
+      "Partner:\n",
+      "[1 0]\n",
+      " \n",
+      "Dependents:\n",
+      "[0 1]\n",
+      " \n",
+      "tenure:\n",
+      "[ 1 34  2 45  8 22 10 28 62 13 16 58 49 25 69 52 71 21 12 30 47 72 17 27\n",
+      "  5 46 11 70 63 43 15 60 18 66  9  3 31 50 64 56  7 42 35 48 29 65 38 68\n",
+      " 32 55 37 36 41  6  4 33 67 23 57 61 14 20 53 40 59 24 44 19 54 51 26  0\n",
+      " 39]\n",
+      " \n",
+      "PhoneService:\n",
+      "[0 1]\n",
+      " \n",
+      "MultipleLines:\n",
+      "[0 1]\n",
+      " \n",
+      "InternetService:\n",
+      "['DSL' 'Fiber optic' 'No']\n",
+      " \n",
+      "OnlineSecurity:\n",
+      "[0 1]\n",
+      " \n",
+      "OnlineBackup:\n",
+      "[1 0]\n",
+      " \n",
+      "DeviceProtection:\n",
+      "[0 1]\n",
+      " \n",
+      "TechSupport:\n",
+      "[0 1]\n",
+      " \n",
+      "StreamingTV:\n",
+      "[0 1]\n",
+      " \n",
+      "StreamingMovies:\n",
+      "[0 1]\n",
+      " \n",
+      "Contract:\n",
+      "['Month-to-month' 'One year' 'Two year']\n",
+      " \n",
+      "PaperlessBilling:\n",
+      "[1 0]\n",
+      " \n",
+      "PaymentMethod:\n",
+      "['Electronic check' 'Mailed check' 'Bank transfer (automatic)'\n",
+      " 'Credit card (automatic)']\n",
+      " \n",
+      "MonthlyCharges:\n",
+      "[29.85 56.95 53.85 ... 63.1  44.2  78.7 ]\n",
+      " \n",
+      "TotalCharges:\n",
+      "['29.85' '1889.5' '108.15' ... '346.45' '306.6' '6844.5']\n",
+      " \n",
+      "Churn:\n",
+      "[0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n \\n\".join(f\"{col}:\\n{df[col].unique()}\" for col in df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "95229b1f-4ffd-4f59-a0b2-6c4899d6a767",
+   "id": "98252221-032a-4217-8797-09cf7351318c",
    "metadata": {},
    "outputs": [],
    "source": []
